--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
 
+        <link rel="icon" href="images/favicon.png"/>
         <link rel="stylesheet" href="css/app.css"/>
 
         <title>Websocket-Tester</title>
